# pluto_ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.json  dev.py  docker-compose.yml  install_reminder_daemon.bat  main.py  pytest.ini  reminder_daemon.py  requirements.md  requirements.txt  start_reminder_daemon.vbs
backend/: .env.example  Dockerfile  README.md  config.example.json  config.json  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/agent/: single.py
backend/agents/: orchestrator.py
backend/handlers/: file_handler.py  text_handler.py  voice_handler.py
backend/instructions/: calendar_agent.md  executor.md  notes_agent.md  orchestrator.md  planner.md  research_agent.md  slides_agent.md
backend/models/: auth.py  batch.py  budget.py  chat.py  knowledge_base.py  plan.py  results.py  search.py  settings.py  tasks.py  transcribe.py  tts.py
backend/my_agents/: calendar.py  calendar_agent.py  dashboard.py  executor.py  executor_agent.py  notes.py  notes_agent.py  orchestrator.py  planner_agent.py  research.py  research_agent.py  single.py  single_agent.py  slides.py  slides_agent.py
backend/routes/: auth.py  autonomous.py  chat.py  files.py  messaging.py  search.py  sessions.py  settings.py  stream.py  transcribe.py  voice.py
backend/tests/: conftest.py  test_memory_tools.py  test_runner.py  test_text_handler.py
backend/tools/: budget.py  calculator.py  calendar.py  calendar_tools.py  diagrams.py  memory_tools.py  notes.py  notes_tools.py  obsidian.py  rag.py  rag_tools.py  reminders.py  research_tools.py  slides.py  slides_tools.py  tasks.py  vault_files.py  (+1 more)
(+190 files in other folders)
