[project]
name = "Pluto-ai"
version = "0.1.0"
description = "Local-first AI assistant with autonomous agents, memory, and tools"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai-agents",
    "openai",
    "pydantic",
    "aiosqlite",
    "sqlite-vec",
    "numpy",
    "python-multipart",
    "httpx",
    "python-dotenv",
    "rich>=13.0",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "Pillow",
    "pymupdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
Pluto = "main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
testpaths = ["../tests/unit", "../tests/e2e"]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "e2e: end-to-end tests that require a running Ollama instance",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
