[package]
name = "personal-ai"
version = "0.1.0"
description = "Personal AI desktop assistant"
authors = []
edition = "2021"

[lib]
name = "personal_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "personal-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
